<resources>

    <string name="app_name">WriteNow</string>

    <string name="menu_make_contents">콘텐츠 만들기</string>
    <string name="menu_my_contents">내가 만든 콘텐츠</string>
    <string name="menu_users_contents">Write Now 콘텐츠</string>

    <string name="str_write_complete">작성완료</string>
    <string name="str_change_templete">템플릿 바꾸기</string>
    <string name="str_change_image">사진 바꾸기</string>

    <string name="str_search_gallery">갤러리 선택</string>
    <string name="str_search_web">이미지 검색</string>

    <string name="str_change_color">색상 수정</string>
    <string name="str_change_text">글자 수정</string>

    <string name="str_step_title">제목 입력</string>
    <string name="str_step_desc">내용 입력</string>

    <string name="str_title">제목</string>
    <string name="str_desc">내용</string>

    <string name="str_color_box">덮개색상</string>
    <string name="str_color_title">제목색상</string>
    <string name="str_color_desc">내용색상</string>
    <string name="str_color_image_filter">사진필터</string>


    <string name="str_custom_finish">작성을 취소하시겠습니까?\n현재 내용은 저장되지 않습니다</string>
    <string name="str_custom_finish_ok">나가기</string>
    <string name="str_custom_finish_cancel">계속하기</string>

    <string name="str_custom_success">저장이 완료되었습니다. 다른 카드를 추가하시겠습니까?</string>
    <string name="str_custom_success_add_card">추가</string>
    <string name="str_custom_success_complete">완료</string>

    <string name="admob_app_id">ca-app-pub-9322286800508543~1289691713</string>

    <string name="admob_bottom_banner">ca-app-pub-9322286800508543/5719891316</string>
    <string name="admob_fullscreen_after_write">ca-app-pub-9322286800508543/1150090914</string>


</resources>
